# ChangeLog for dev-util/subversion
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.377 2009/05/18 05:47:53 arfrever Exp $

  18 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  subversion-1.6.2.ebuild:
  Update some messages and handling of tests.

*subversion-1.6.2 (12 May 2009)

  12 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -subversion-1.6.0-r1.ebuild, -files/subversion-1.6.0-various_fixes.patch,
  +subversion-1.6.2.ebuild,
  +files/subversion-1.6.2-fix_undefined_references.patch,
  +files/subversion-1.6.2-local_library_preloading.patch:
  Version bump.

  03 May 2009; Markus Meier <maekke@gentoo.org> subversion-1.5.6.ebuild:
  amd64 stable, bug #267270

  26 Apr 2009; Raúl Porcel <armin76@gentoo.org> subversion-1.5.6.ebuild:
  alpha/arm/ia64/s390/sh/sparc/x86 stable wrt #267270

  24 Apr 2009; Brent Baude <ranger@gentoo.org> subversion-1.5.6.ebuild:
  stable ppc, bug 267270

  24 Apr 2009; Brent Baude <ranger@gentoo.org> subversion-1.5.6.ebuild:
  stable ppc64, bug 267270

  24 Apr 2009; Jeroen Roovers <jer@gentoo.org> subversion-1.5.6:
  Stable for HPPA (bug #267270).

  23 Apr 2009; Raúl Porcel <armin76@gentoo.org> subversion-1.6.1.ebuild:
  Add ~ia64 wrt #263337

  15 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +files/subversion-1.6.1-fix_sqlite_configuration.patch,
  subversion-1.6.1.ebuild:
  Fix SQLite configuration (bug #264241).

  12 Apr 2009; Tobias Klausmann <klausman@gentoo.org>
  subversion-1.6.1.ebuild:
  Keyworded on alpha, bug #263337

  12 Apr 2009; Tobias Klausmann <klausman@gentoo.org>
  subversion-1.6.0-r1.ebuild:
  Keyworded on alpha, bug #263337

  10 Apr 2009; Raúl Porcel <armin76@gentoo.org> subversion-1.6.0-r1.ebuild,
  subversion-1.6.1.ebuild:
  Add ~arm/~s390/~sh wrt #263337

*subversion-1.6.1 (09 Apr 2009)
