@@ -29,9 +29,9 @@ DIST subversion-1.5.5.tar.bz2 4940482 RMD160 6400e387b3505180206b61729cb0b11baea
 DIST subversion-1.5.6.tar.bz2 4946600 RMD160 5883f925e19e719c8656b5488ed9b00c0f7c3a79 SHA1 774b6dbd4245c36e86289393e651e36dedf17018 SHA256 f701fe75fecc43d9aecf717260ca18661469128a2f28a57c7e6672f3f64f46c2
 DIST subversion-1.6.1.tar.bz2 5462507 RMD160 b3cc8e6cf46c8e4ad4adbee6e3dec186ae790257 SHA1 de01efed25505d689c369a67fbf9b2d2f02e4795 SHA256 cdd4a7a4e2c6e67967b99fe7857a409b2ff5e57126214fdc0f6d835ff789e6ca
 DIST subversion-1.6.2.tar.bz2 5470969 RMD160 b20b4950188f2482984a1e7b0e5e0bdfccb06b09 SHA1 f3b7f35dee4772a25646fe1fbb5108a6569803d1 SHA256 9788a5a19d032b7711b54f462f40b72ee0c6180069335db6994d96b7b23c4075
-EBUILD subversion-1.5.5.ebuild 13984 RMD160 5d7246420535ec39833cff1f86e4416c1ca10dfe SHA1 68672bed872b5b6d312e6a1acf6387857dd57d74 SHA256 e2783fa8572ab5c2613c869f111572064e8b27c5901dc76e62ac34dc09f94bdc
-EBUILD subversion-1.5.6.ebuild 14077 RMD160 886cb51f3cbbba58ef8873194bd46d0bf6618d02 SHA1 aeebdaf86beb0dc519da2653f069db0d6fcf2942 SHA256 bcdce2f62cbc331f2f918d2db666a65f0be5af9560f5632b86d5934d70a9419a
-EBUILD subversion-1.6.1.ebuild 17865 RMD160 d59643e590afb4fd243de846cd9c91d41a75d3e6 SHA1 7e55615d0e50b7a4d4a89d743e4a884003c28ab5 SHA256 282605b9a93b66cf3a345524f531b78683f5dd3dc3191321c2a3b25435d2fde7
-EBUILD subversion-1.6.2.ebuild 27111 RMD160 ff4103d811d07b40d4d768d315e33310d3b094b6 SHA1 ac01cd44242d23988f4f3c08b4c2565c576a1b13 SHA256 bf875d609d3ff7998fcb7d90898d9e50bff0b035baa8dbd544289ba8fbfe2fae
-MISC ChangeLog 63098 RMD160 d50066f54b65841a2e27bddd58876c9a8c768c86 SHA1 c4c5ec1afcc4fda9d773d2bdac6783a4184f00b7 SHA256 41ed0eb842bd968c0be1d019c84c9311d663edf3c1f3f4974c1539a35ac2fcfd
+EBUILD subversion-1.5.5.ebuild 14014 RMD160 0a09a911af2c189e7b4acf90c5f3cc9805eab3f9 SHA1 79e31792a0fe34ccfd45e2c736dc7db6c3b9ac7c SHA256 f9ce99cbc056d8f2cfe5ede03ff5ab7d4ee20fc93c8aa9037326c5bdd929c036
+EBUILD subversion-1.5.6.ebuild 14104 RMD160 edb82b5ec96bfeb67831bd37fabf19598bbb4a26 SHA1 83ef0d91ba3f9803cbd624f32208bfe99738ce42 SHA256 4358b95b52d1dbe1530ad5a96769145bd95244ccc38e95e5043664522a262d2b
+EBUILD subversion-1.6.1.ebuild 17892 RMD160 9260af39bc467a5c7aa51d7f8e1342a13a1d3521 SHA1 1032504816c3e6b4c22d6781fcdfdafdb220b9f4 SHA256 a1f41675ad68d30e86e5e39dd0084e41fbd0dfe1a1780e0e828548c0e11a3506
+EBUILD subversion-1.6.2.ebuild 27137 RMD160 247f3fda4d44d294c55f6d0dac7051de0751f9a5 SHA1 3bfa052e4188969a5ca00f3eafcf925f3ce3c0ff SHA256 1fa0e917f6782417fda3e71012ea8d0027af26bb172aebc3d09e1f9a1393417f
+MISC ChangeLog 63339 RMD160 a20f6bb592ce02a289a8e8795f1662956563390a SHA1 2bb7a3d2f3fc2434a59631e6776bafc23d29ffa1 SHA256 36211d32f547597f8442f63c6c305defe5ee32598bc67122694a7cfd2d205b1e
 MISC metadata.xml 794 RMD160 6e8968481ac256000ec54f71bac21c7b4cbde1cc SHA1 c753273c54c52d52187cb886e35dc08726f1b97e SHA256 3d7a28065aaf0e28837de71ccde29de53a074b5b3ede715c1b412cf5a43aaeac
