@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/subversion-1.6.1.ebuild,v 1.5 2009/04/23 09:14:59 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/subversion-1.6.1.ebuild,v 1.6 2009/05/26 17:02:05 arfrever Exp $
 
 EAPI=1
 
@@ -79,6 +79,8 @@ pkg_setup() {
 			die "Berkeley DB version mismatch"
 		fi
 	fi
+
+	depend.apache_pkg_setup
 
 	java-pkg-opt-2_pkg_setup
 
