@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/subversion
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.377 2009/05/18 05:47:53 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.378 2009/05/26 17:02:05 arfrever Exp $
+
+  26 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  subversion-1.5.5.ebuild, subversion-1.5.6.ebuild, subversion-1.6.1.ebuild,
+  subversion-1.6.2.ebuild:
+  Call depend.apache_pkg_setup() in pkg_setup() (bug #268371).
 
   18 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   subversion-1.6.2.ebuild:
